fix: clientes module mobile overflow definitive fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,
+body {
   overflow-x: hidden;
   max-width: 100vw;
 }
